# production-youtube-downloader-platform

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: api.md  deployment.md  legal-disclaimer.md  setup.md  telegram-bot.md
scripts/: cleanup_cron.sh  dev.sh
src/app/: layout.tsx  page.tsx
src/ytdl_platform/: __init__.py  config.py  main.py
src/ytdl_platform/api/: app.py  deps.py  schemas.py
src/ytdl_platform/bot/: app.py  messages.py
src/ytdl_platform/cli/: main.py
src/ytdl_platform/domain/: models.py
src/ytdl_platform/services/: downloader.py  extractor.py  progress.py  quality.py  storage.py
src/ytdl_platform/utils/: __init__.py
tests/: test_api.py  test_link_service.py  test_quality.py  test_validators.py
