[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytdl-platform"
version = "1.0.0"
description = "YouTube media download platform — API, Telegram bot, CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "YTDL Platform Contributors"}]

dependencies = [
    "yt-dlp>=2024.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-telegram-bot>=21.0",
    "aiosqlite>=0.19.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.6",
     "aiofiles>=23.0.0",
  "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.2.0",
]
s3 = [
    "boto3>=1.34.0",
]

[project.scripts]
ytdl-tool = "ytdl_platform.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
